[package]
name = "ghi"
authors = ["Josh Newman"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
futures-util = "0.3.25"
indicatif = "0.17.3"
is_executable = "1.0.1"
octocrab = { version = "0.18.1", features = ["stream"] }
reqwest = "0.11.13"
tokio = { version = "1.24.1", features = ["full"] }
